--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -4,6 +4,10 @@
     font-size: 18px;
     line-height: 144.44%;
 
+    p, ul, ol {
+        font-size: 18px;
+    }
+
     section, footer {
         border: 1px solid $dark_gray;
         border-bottom-width: 0;
@@ -24,7 +28,7 @@
     }
 
     h2 {
-        background-color: $light_gray;
+        background-color: $dark_blue;
         cursor: pointer;
         font-size: 20px;
         font-weight: bold;
@@ -33,6 +37,7 @@
         padding: 20px 40px;
         position: relative;
         width: calc(100% + 80px);
+        color: #fff;
         &:after, &:before {
             content: '—';
             display: none;
@@ -40,13 +45,14 @@
             position: absolute;
             right: 40px;
             top: 19px;
+            color: #fff;
         }
         &:before {
             display: block;
         }
         &:hover, &:focus {
             &:after, &:before {
-                color: $blue;
+                color: $light_blue;
             }
         }
     }
@@ -62,9 +68,10 @@
     
 
     h3 {
-        font-size: 18px;
+        font-size: 20px;
         line-height: 24px;
         margin-bottom: 0;
+        color: $dark_blue;
     }
     h4 {
         font-size: 16px;
@@ -94,6 +101,7 @@
             font-size: 10px;
             line-height: 18px;
             margin-bottom: 0;
+            color: $gray;
         }
     }
 
