--- a/src/css/variable.scss
+++ b/src/css/variable.scss
@@ -1,4 +1,8 @@
 /* colors */
-$blue: #296EC3;
-$light_gray: #f0f0f0f0;
+$dark_blue: #162F69;
+$medium_blue: #1B6BAA;
+$light_blue: #36AECE;
+$blue_gray: #8A97B4;
+$gray: #7D7D7D;
+$light_gray: #F0F0F0;
 $dark_gray: #333;
