--- a/src/partials/sections.html
+++ b/src/partials/sections.html
@@ -1,4 +1,4 @@
-<section>
+<section id="section-overview">
 	<h2 role="button" tabindex="0" aria-label="Show/hide content">Overview</h2>
     <div class="js-inner-content">
     
@@ -35,16 +35,12 @@
 
     </div>
     </section>
-<section>
+<section id="section-comparison">
 	<h2 role="button" tabindex="0" aria-label="Show/hide content">State Comparison</h2>
     <div class="js-inner-content">
-    
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam saepe, labore tenetur architecto assumenda placeat odio quas praesentium nihil dolores animi, eius pariatur officia porro quae voluptas sapiente! Adipisci, ea!</p>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam saepe, labore tenetur architecto assumenda placeat odio quas praesentium nihil dolores animi, eius pariatur officia porro quae voluptas sapiente! Adipisci, ea!</p>
-
     </div>
     </section>
-<section>
+<section id="section-states">
 	<h2 role="button" tabindex="0" aria-label="Show/hide content">50-State Data</h2>
     <div class="js-inner-content">
     
@@ -53,7 +49,7 @@
 
     </div>
     </section>
-<section>
+<section id="section-about">
 	<h2 role="button" tabindex="0" aria-label="Show/hide content">About the Data</h2>
     <div class="js-inner-content">
     
