Initial text comparisons are in

--- a/src/partials/sections.html
+++ b/src/partials/sections.html
@@ -1,5 +1,5 @@
 <section id="section-overview">
-	<h2 role="button" tabindex="0" aria-label="Show/hide content">Overview</h2>
+	<h2 class="static" role="button" tabindex="0" aria-label="Show/hide content">Overview</h2>
     <div class="js-inner-content">
     
 	<p>
@@ -36,12 +36,12 @@
     </div>
     </section>
 <section id="section-comparison">
-	<h2 role="button" tabindex="0" aria-label="Show/hide content">State Comparison</h2>
+	<h2 class="static" role="button" tabindex="0" aria-label="Show/hide content">State Comparison</h2>
     <div class="js-inner-content">
     </div>
     </section>
 <section id="section-states">
-	<h2 role="button" tabindex="0" aria-label="Show/hide content">50-State Data</h2>
+	<h2 class="static" role="button" tabindex="0" aria-label="Show/hide content">50-State Data</h2>
     <div class="js-inner-content">
     
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam saepe, labore tenetur architecto assumenda placeat odio quas praesentium nihil dolores animi, eius pariatur officia porro quae voluptas sapiente! Adipisci, ea!</p>
@@ -50,7 +50,7 @@
     </div>
     </section>
 <section id="section-about">
-	<h2 role="button" tabindex="0" aria-label="Show/hide content">About the Data</h2>
+	<h2 class="static" role="button" tabindex="0" aria-label="Show/hide content">About the Data</h2>
     <div class="js-inner-content">
     
 	<p>
@@ -69,7 +69,7 @@
     Instead, the tool is intended to help states consider these differences
     when constructing peer groups.
 </p>
-<h3>
+<h3 class="static">
     Borrowing practices
 </h3>
 <p>
@@ -216,7 +216,7 @@ ability to borrow is so restricted.<sup>5</sup> This tool measures the
 <p>
     <strong></strong>
 </p>
-<h3>
+<h3 class="static">
     Fiscal conditions and infrastructure needs
 </h3>
 <p>
@@ -305,7 +305,7 @@ does its demand for, and in some cases spending on, capital construction.<sup>8<
     >
         https://www2.census.gov/programs-surveys/popest/tables/2000-2010/intercensal/state/st-est00int-01.xls</a>
 </p></div>
-<h3>
+<h3 class="static">
     Debt levels (2015)
 </h3>
 <p>
@@ -393,7 +393,7 @@ wealth is therefore beneficial.<sup>13</sup> Debt as a percentage
 	further ensures an accurate description of state debt.<sup>16</sup> 
 	</p>
 </aside>
-<h3>
+<h3 class="static">
     Credit ratings (September 2018 and September 2015)
 </h3>
 <p>
