--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -67,13 +67,13 @@
     }
     
 
-    h3 {
+    h3.static {
         font-size: 20px;
         line-height: 24px;
         margin-bottom: 0;
         color: $dark_blue;
     }
-    h4 {
+    h4.static {
         font-size: 16px;
     }
 
