--- a/src/views/state-comparison/styles.scss
+++ b/src/views/state-comparison/styles.scss
@@ -1,3 +1,28 @@
-.comparisonView {
-    border: 1px solid magenta;
+@import '@Project/css/variable.scss';
+
+
+
+.groupHeader {
+    margin-bottom: 40px;
+    font-size: 20px;
+    color: $dark_blue;
+}
+
+.typeContainer {
+    display: flex;
+    flex-wrap: wrap;
+}
+.typeDiv {
+
+    width: 50%;
+}
+:global(.rich-text) .typeHeader {
+    font-size: 16px;
+}
+.debt_limit_type {
+    width: 100%;
+}
+.credit2015, .credit2018 {
+    width: auto;
+    margin-right: 90px;
 }
