--- a/src/components/comparison/styles.scss
+++ b/src/components/comparison/styles.scss
@@ -49,20 +49,14 @@ div.compareColor2 {
     grid-column-start: 2;
     grid-row-start: 2;
 }
-.bar {
-    width: calc(100% - 75px);
-    height: 24px;
-    transform: scaleX(1);
-    transition: transform 0.2s ease-in-out;
-    transform-origin: left;
-}
+
 .dataLabel {
     position: absolute;
     left: 0;
     top: 0;
     font-size: 16px;
     font-weight: 600;
-    width: calc(100% - 75px);
+    width: 100%;
     transform: translateX(100%);
     padding-left: 5px;
     transition: transform 0.2s ease-in-out;
