Dropdowns in; highlight style in

--- a/src/css/variable.scss
+++ b/src/css/variable.scss
@@ -2,6 +2,7 @@
 $dark_blue: #162F69;
 $medium_blue: #1B6BAA;
 $light_blue: #36AECE;
+$highlight_blue: #DCE8F2;
 $blue_gray: #8A97B4;
 $gray: #7D7D7D;
 $light_gray: #F0F0F0;
