Compare inputs in roughly; needs initialization

--- a/src/partials/sections.html
+++ b/src/partials/sections.html
@@ -38,6 +38,16 @@
 <section id="section-comparison">
 	<h2 class="static" role="button" tabindex="0" aria-label="Show/hide content">State Comparison</h2>
     <div class="js-inner-content">
+        <div class="compare-selection-wrapper">
+            <span class="compare-label">Compare</span><br />
+            <div class="autoComplete_wrapper">
+                <input id="compare-input-0">
+            </div>
+            <span>to</span>
+            <div class="autoComplete_wrapper">
+                <input id="compare-input-1">
+            </div>
+        </div>
     </div>
     </section>
 <section id="section-states">
