--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -4,7 +4,11 @@
     font-size: 18px;
     line-height: 144.44%;
 
-    
+    :global(.flex) {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }    
 
     section, footer {
         border: 1px solid $dark_gray;
