--- a/src/partials/sections.html
+++ b/src/partials/sections.html
@@ -40,12 +40,14 @@
     <div class="js-inner-content">
         <div class="compare-selection-wrapper">
             <span class="compare-label">Compare</span><br />
-            <div class="autoComplete_wrapper">
-                <input id="compare-input-0">
-            </div>
-            <span>to</span>
-            <div class="autoComplete_wrapper">
-                <input id="compare-input-1">
+            <div class="flex flex-start flex-baseline autoComplete_outerWrapper">
+                <div class="autoComplete_wrapper">
+                    <input id="compare-input-0">
+                </div>
+                <span>to</span>
+                <div class="autoComplete_wrapper">
+                    <input id="compare-input-1">
+                </div>
             </div>
         </div>
     </div>
