--- a/src/views/state-comparison/styles.scss
+++ b/src/views/state-comparison/styles.scss
@@ -16,8 +16,9 @@
     }
 }
 .typeDiv {
-    max-width: 400px;
-    width: 50%;
+    width: 400px;
+    flex-grow: 1;
+    margin-bottom: 18px;
 }
 :global(.rich-text) .typeHeader {
     font-size: 16px;
@@ -25,22 +26,34 @@
 .debt_limit_type {
     width: 100%;
     max-width: 100%;
+    p {
+        margin-bottom: 0;
+    }
 }
 .credit2015, .credit2018 {
-    width: auto;
+    max-width: 125px;
     margin-right: 90px;
 }
 
 :global(.compare-label) {
     font-style: italic;
 }
-
-:global(.autoComplete_wrapper) {
-    width: 320px;
+:global(.autoComplete_outerWrapper) {
+    > span {
     margin-right: 20px;
-    &:last-of-type {
-        margin-left: 20px;
+    margin-top: 10px;
+   }
+    @media screen and (max-width: 834px){
+        flex-direction: column;
+        align-items: center;
+        max-width: 320px;
     }
+}
+:global(.autoComplete_wrapper) {
+    width: 100%;
+    max-width: 320px;
+    margin-right: 20px;
+   
 }
 
 :global(.compare-selection-wrapper) {
