--- a/src/partials/sections.html
+++ b/src/partials/sections.html
@@ -41,11 +41,11 @@
         <div class="compare-selection-wrapper">
             <span class="compare-label">Compare</span><br />
             <div class="flex flex-start flex-baseline autoComplete_outerWrapper">
-                <div class="autoComplete_wrapper">
+                <div class="autoComplete_wrapper" id="autoComplete_wrapper-0">
                     <input id="compare-input-0">
                 </div>
                 <span>to</span>
-                <div class="autoComplete_wrapper">
+                <div class="autoComplete_wrapper" id="autoComplete_wrapper-1">
                     <input id="compare-input-1">
                 </div>
             </div>
