--- a/src/views/state-comparison/styles.scss
+++ b/src/views/state-comparison/styles.scss
@@ -1,16 +1,29 @@
 @import '@Project/css/variable.scss';
 
-:global(.rich-text) .groupHeader {
-    margin-bottom: 25px;
-    font-size: 20px;
-    color: $dark_blue;
+:global(.rich-text) {
+    .groupHeader {
+        margin-bottom: 20px;
+        font-size: 20px;
+        line-height: 24px;
+        color: $dark_blue;
+    }
+    h3 {
+        font-size: 24px;
+        color: $dark_blue;
+    }
+    h4 {
+        font-size: 16px;
+        color: $light_blue;
+        margin-bottom: 0;
+    }
 }
+
 
 .typeContainer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-bottom: 75px;
+    margin-bottom: 45px;
     .credit-rating & {
         justify-content: flex-start;
     }
@@ -24,6 +37,8 @@
     font-size: 16px;
     display: inline-block;
     position: relative;
+    color: $dark_gray;
+    margin-bottom: 0.5em;
 }
 .debt_limit_type {
     width: 100%;
