Adds empty column to acct for datalabels in comparison view

--- a/src/components/comparison/styles.scss
+++ b/src/components/comparison/styles.scss
@@ -14,7 +14,7 @@ div.compareColor2 {
 }
 .chartContainer {
     display: grid;
-    grid-template-columns: auto 100fr;
+    grid-template-columns: auto 100fr 85px;
     grid-template-rows: auto auto;
     grid-column-gap: 15px;
     grid-row-gap: 4px;
