Updates text sizes, tooltip opacity

--- a/src/views/state-comparison/tippy-styles.scss
+++ b/src/views/state-comparison/tippy-styles.scss
@@ -2,7 +2,7 @@
 
 :global(.tippy-backdrop){
     background-color: $dark_blue;
-    opacity: .95;
+    opacity: 1;
 }
 :global(.tippy-content){
     font-weight: 600;
