--- a/src/views/fifty-state/styles.scss
+++ b/src/views/fifty-state/styles.scss
@@ -38,3 +38,19 @@ $label_width: 128px;
 :global(#explainer-wrapper) {
     transition: height 0.2s ease-in-out;
 }
+
+.dataLabel {
+    position: absolute;
+    left: 138px;
+    top: 2px;
+    font-size: 16px;
+    font-weight: 600;
+    width: calc(100% - 233px);
+    transform: translateX(100%);
+    padding-left: 5px;
+    transition: transform 0.2s ease-in-out;
+}
+
+.placeHolder {
+    width: 85px;
+}
