Adjust drodown clickable-ness

--- a/src/views/fifty-state/selections/styles.scss
+++ b/src/views/fifty-state/selections/styles.scss
@@ -18,6 +18,7 @@
 .dropdownInner {
         margin-top: 8px;
         position: relative;
+        background-color: transparent;
     
     &:before {
         content: '';
