--- a/src/components/dropdown/styles.scss
+++ b/src/components/dropdown/styles.scss
@@ -31,7 +31,7 @@
 
         li {
             @extend %font-shared;
-            padding: 0.1em 0 0.5em;
+            padding: 0.7em 0 0.5em;
             border-bottom: 1px solid $light_gray;
             &:hover, &:global(.selected) {
                 color: $dark_blue;
@@ -40,7 +40,7 @@
                 font-weight: bold;
             }
             &:first-child {
-                margin-top: 0.7em;
+                padding-top: 0.4em;
             }
 
             &:last-child {
