Large config changes; postCSS-assets, etc; rewrites for fonts to work on preview

--- a/src/views/state-comparison/styles.scss
+++ b/src/views/state-comparison/styles.scss
@@ -139,7 +139,7 @@
         right: -15px;
         display: block;
         top: 0;
-        background:transparent url('./tooltip.min.svg') no-repeat;
+        background:transparent inline('tooltip.min.svg') no-repeat;
 
     }
     
