WIP: anchors, WIP: revised copy

--- a/src/partials/sections.html
+++ b/src/partials/sections.html
@@ -3,36 +3,34 @@
     <div class="js-inner-content">
     
 	<p>
-	    When state policymakers try to assess how much debt to take on for projects
-	    such as roads, bridges, and schools, they often compare debt levels in
-	    their state to those of others. Because no universal guidelines exist for
-	    how much debt is affordable, many policymakers evaluate how their state
-	    stacks up against others with a common credit rating or national median
-	    debt level.
-	</p>
-	<p>
-	    But selecting a peer group based only on a common rating or using national
-	    benchmarks overlooks many factors that influence borrowing levels. States
-	    with growing populations, for example, tend to borrow more; a state&#8217;s
-	    fiscal health affects the funds available for debt service; and policies
-	    meant to limit state debt can influence how much local governments and
-	    other state entities borrow for capital projects.
-	</p>
-	<p>
-	    To address this gap, The Pew Charitable Trusts has created an interactive
-	    tool to allow policymakers to compare states based on seven characteristics
-	    related to debt.<sup>*</sup> States can use these data to select more
-	    tailored peer groups, giving them a deeper understanding of how states with
-	    similar borrowing practices, constraints, and needs manage their borrowing.
-	    Ultimately, these improved comparisons will help them make better-informed
-	    decisions.
-	</p>
-	<p class="pct-footnote">
-	<sup>*</sup> To measure debt levels, this tool uses Census Bureau data. For more
-	    information about these characteristics and why Pew chose them, see the 
-	    &#8220;About the Data&#8221; section below.
-	</p>
-
+        When state policymakers try to assess how much debt to take on for projects
+        such as roads, bridges, and schools, they often compare debt levels in
+        their state to those of others. Because no universal guidelines exist for
+        how much debt is affordable, many policymakers evaluate how their state
+        stacks up against others with a common credit rating or national median
+        debt levels.
+    </p>
+    <p>
+        But selecting a peer group based only on a common rating or using national
+        benchmarks overlooks many factors that influence borrowing levels. States
+        with growing populations, for example, tend to borrow more; a state’s
+        fiscal health affects the funds available for debt service; and policies
+        meant to limit state debt can influence how much local governments and
+        other state entities borrow for capital projects.
+    </p>
+    <p>
+        To address this gap, The Pew Charitable Trusts has created an interactive
+        tool to allow policymakers to compare states based on seven characteristics
+        related to debt. States can use these data to select more tailored peer
+        groups, giving them a deeper understanding of how states with similar
+        borrowing practices, constraints, and needs manage their borrowing.
+        Ultimately, these improved comparisons will help states make
+        better-informed decisions.
+    </p>
+    <p>
+        More information about these characteristics and why Pew chose them may be
+        found in the “About the Data” section at the bottom of this page.
+    </p>
     </div>
     </section>
 <section id="section-comparison">
@@ -61,7 +59,7 @@
 	<h2 class="static" role="button" tabindex="0" aria-label="Show/hide content">About the Data</h2>
     <div class="js-inner-content">
     
-	<p>
+<p>
     Pew researchers developed this list of characteristics by examining
     relevant literature and consulting subject matter experts. The final set of
     seven characteristics included in the tool was selected based on evidence
@@ -85,7 +83,8 @@
     obligation (GO) debt limits, centralization, and the division of
     state-local borrowing in a state can affect state borrowing practices.
 </p>
-<h4>
+<a name="debt_limit_type" id="debt_limit_type"></a>
+<h4 class="js-debt_limit_type">
     General obligation debt limit type (2018)
 </h4>
 <p>
@@ -170,7 +169,8 @@ Borrowing: An Analysis of State Bonded Indebtedness,”    <cite>The Journal of 
 <p>
     <strong>Source:</strong> Pew analysis of state constitutions and statutes
 </p></div>
-<h4>
+<a name="centralization" id="centralization"></a>
+<h4 class="js-centralization">
     Centralization (fiscal year 2014)
 </h4>
 <p>
@@ -197,7 +197,8 @@ Borrowing: An Analysis of State Bonded Indebtedness,”    <cite>The Journal of 
     debt of major component units as reported in their annual financial
     statements.<sup>4</sup> 
 </p></div>
-<h4>
+<a name="state_local_division" id="state_local_division"></a>
+<h4 class="js-state_local_division">
     The state-local borrowing division (2015)
 </h4>
 <p>
@@ -233,7 +234,8 @@ ability to borrow is so restricted.<sup>5</sup> This tool measures the
     demand for debt. Observing trends and variations among states in both
     categories can allow officials to create more appropriate peer groups.
 </p>
-<h4>
+<a name="revenue_volatility" id="revenue_volatility"></a>
+<h4 class="js-revenue_volatility">
     Revenue volatility (1997-2016)
 </h4>
 <p>
@@ -267,7 +269,8 @@ revenue between 1997 and 2016.<sup>7</sup> States have differing
     >
         http://www.pewtrusts.org/en/research-and-analysis/data-visualizations/2014/fiscal-50#ind6</a>
 </p></div>
-<h4>
+<a name="ten_year_pop_growth" id="ten_year_pop_growth"></a>
+<h4 class="js-ten_year_pop_growth">
     Population growth (2008-17)
 </h4>
 <p>
@@ -331,7 +334,8 @@ does its demand for, and in some cases spending on, capital construction.<sup>8<
     evaluating debt levels and setting limits. This ratio is not included in
 this tool due to cross-state comparability issues.<sup>11</sup> 
 </p>
-<h4>
+<a name="debt_per_capita" id="debt_per_capita"></a>
+<h4 class="js-debt_per_capita">
     Debt per capita
 </h4>
 <p>
@@ -357,7 +361,8 @@ this tool due to cross-state comparability issues.<sup>11</sup>
     >
         https://www2.census.gov/programs-surveys/popest/tables/2010-2017/state/totals/nst-est2017-01.xlsx</a>
 </p></div>
-<h4>
+<a name="debt_percent_SPI" id="debt_percent_SPI"></a>
+<h4 class="js-debt_percent_SPI">
     Debt as a percentage of state personal income
 </h4>
 <p>
@@ -401,7 +406,8 @@ wealth is therefore beneficial.<sup>13</sup> Debt as a percentage
 	further ensures an accurate description of state debt.<sup>16</sup> 
 	</p>
 </aside>
-<h3 class="static">
+<a name="credit_rating" id="credit_rating"></a>
+<h3 class="js-credit_rating static">
     Credit ratings (September 2018 and September 2015)
 </h3>
 <p>
