--- a/src/views/state-comparison/tippy-styles.scss
+++ b/src/views/state-comparison/tippy-styles.scss
@@ -7,4 +7,9 @@
 :global(.tippy-content){
     font-weight: 600;
     padding-bottom: 3px;
+    a, a:hover, a:active, a:visited {
+        color: #fff;
+        font-variant: small-caps;
+        
+    }
 }
