--- a/src/partials/sections.html
+++ b/src/partials/sections.html
@@ -40,11 +40,11 @@
             <span class="compare-label">Compare</span><br />
             <div class="flex flex-start flex-baseline autoComplete_outerWrapper">
                 <div class="autoComplete_wrapper" id="autoComplete_wrapper-0">
-                    <input autocomplete="hack" type="text" id="compare-input-0">
+                    <input autocomplete="off" type="text" id="compare-input-0">
                 </div>
                 <span>to</span>
                 <div class="autoComplete_wrapper" id="autoComplete_wrapper-1">
-                    <input autocomplete="hack" type="text" id="compare-input-1">
+                    <input autocomplete="off" type="text" id="compare-input-1">
                 </div>
             </div>
         </div>
