Anchor links to About the Data

--- a/src/partials/sections.html
+++ b/src/partials/sections.html
@@ -29,7 +29,7 @@
     </p>
     <p>
         More information about these characteristics and why Pew chose them may be
-        found in the “About the Data” section at the bottom of this page.
+        found in the <a class="pct-static-anchor" id="about-the-data" href="#section-about">About the Data</a> section at the bottom of this page.
     </p>
     </div>
     </section>
