Uses same source for tooltips and explainer text; more links for both now

--- a/src/partials/sections.html
+++ b/src/partials/sections.html
@@ -3,29 +3,13 @@
     <div class="js-inner-content">
     
 	<p>
-        When state policymakers try to assess how much debt to take on for projects
-        such as roads, bridges, and schools, they often compare debt levels in
-        their state to those of others. Because no universal guidelines exist for
-        how much debt is affordable, many policymakers evaluate how their state
-        stacks up against others with a common credit rating or national median
-        debt levels.
+        When state policymakers try to assess how much debt to take on for projects such as roads, bridges, and schools, they often compare debt levels in their state to those of others. Because no universal guidelines exist for how much debt is affordable, many policymakers evaluate how their state stacks up against others with a common credit rating or national median debt levels.
     </p>
     <p>
-        But selecting a peer group based only on a common rating or using national
-        benchmarks overlooks many factors that influence borrowing levels. States
-        with growing populations, for example, tend to borrow more; a state’s
-        fiscal health affects the funds available for debt service; and policies
-        meant to limit state debt can influence how much local governments and
-        other state entities borrow for capital projects.
+        But selecting a peer group based only on a common rating or using national benchmarks overlooks many factors that influence borrowing levels. States with growing populations, for example, tend to borrow more; a state's fiscal health affects the funds available for debt service; and policies meant to limit state debt can influence how much local governments and other state entities borrow for capital projects.
     </p>
     <p>
-        To address this gap, The Pew Charitable Trusts has created an interactive
-        tool to allow policymakers to compare states based on seven characteristics
-        related to debt. States can use these data to select more tailored peer
-        groups, giving them a deeper understanding of how states with similar
-        borrowing practices, constraints, and needs manage their borrowing.
-        Ultimately, these improved comparisons will help states make
-        better-informed decisions.
+        To address this gap, The Pew Charitable Trusts has created an interactive tool to allow policymakers to compare states based on seven characteristics related to debt. States can use these data to select more tailored peer groups, giving them a deeper understanding of how states with similar borrowing practices, constraints, and needs manage their borrowing. Ultimately, these improved comparisons will help states make better-informed decisions.
     </p>
     <p>
         More information about these characteristics and why Pew chose them may be
