Small text edits from feedbakc

--- a/src/partials/sections.html
+++ b/src/partials/sections.html
@@ -175,7 +175,7 @@ Borrowing: An Analysis of State Bonded Indebtedness,”    <cite>The Journal of 
 </p>
 <a name="revenue_volatility" id="revenue_volatility"></a>
 <h4 class="js-revenue_volatility">
-    Revenue volatility (1997-2016)
+    Revenue volatility (1998-2017)
 </h4>
 <p>
     Revenue volatility is the annual fluctuation in tax collections and is
@@ -197,14 +197,14 @@ Borrowing: An Analysis of State Bonded Indebtedness,”    <cite>The Journal of 
     of its revenue from stable sources such as personal income taxes—have less
     volatility. A low volatility score means that revenue levels were similar
     from year to year, and a high score indicates that revenue grew or declined
-    more dramatically.
+    more dramatically. The scores range from 2.7 to 37.6.
 </p>
 <div>
     <div id="edn1">
     </div>
 </div>
 <div class="pct-note"><p>
-    <strong>Source:</strong> The Pew Charitable Trusts, “Tax Revenue Volatility, FY 1997-2016,”
+    <strong>Source:</strong> The Pew Charitable Trusts, “Tax Revenue Volatility, FY 1998-2017,”
     last modified Aug. 29, 2018,
     <a
         href="http://www.pewtrusts.org/en/research-and-analysis/data-visualizations/2014/fiscal-50#ind6"
