--- a/src/components/comparison/styles.scss
+++ b/src/components/comparison/styles.scss
@@ -18,6 +18,9 @@ div.compareColor2 {
     grid-template-rows: auto auto;
     grid-column-gap: 15px;
     grid-row-gap: 4px;
+    @media (max-width: 917px){
+        grid-template-columns: auto 100fr 40px;
+    }
     
 }
 :global(.rich-text) p.chartLabel {
