--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,8 +1,12 @@
 @import 'variable.scss';
 
 :global(.rich-text #pew-app) {
-
-    :global(#section-overview){
+    @media (max-width: 917px){
+        width: 100vw;
+        margin-left: -1.125rem;
+        margin-top: -40px;
+    }
+    :global(#section-overview), :global(#section-about){
         p:not(:global(.pct-footnote)), li, blockquote {
             font-size: 18px;
         }
@@ -29,6 +33,10 @@
         }
         > div {
             padding: 50px 0 40px;
+        }
+        @media (max-width: 917px){
+            padding: 0 1.125rem;
+            border-width: 0;
         }
     }
 
@@ -68,6 +76,10 @@
                 color: $light_blue;
             }
         }
+        @media (max-width: 917px){
+            width: 100vw;
+            margin: 0 0 0 -1.125rem;
+        }
     }
     
     :global(h2.pct-is-closed){
@@ -95,7 +107,7 @@
     }
 
     :global(.pct-note), :global(.pct-note) p, :global(.pct-note) li, :global(.pct-note) blockquote {
-        font-size: 13px;
+        font-size: 14px !important;
         line-height: 200%;
         strong {
             font-weight: 800;
@@ -110,7 +122,7 @@
 
     :global(.pct-endnotes){
         p, li, blockquote {
-            font-size: 13px;
+            font-size: 13px !important;
             line-height: 18px;
             margin-bottom: 0;
             color: $gray;
