--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
 <footer>
 		<div>
 			<p><strong>Download resources:</strong>
-					<a class="pct-download" href="">Resource 1</a>
-					<a class="pct-download" href="">Resource 2</a>
+					<a class="pct-download" href="">[placeholder]</a>
+					<a class="pct-download" href="">[placeholder]</a>
 				</p></div>
 </footer>
