Adds magnifying glass to select inputs

--- a/src/views/state-comparison/styles.scss
+++ b/src/views/state-comparison/styles.scss
@@ -83,6 +83,8 @@
     padding: 0;
     border-bottom-color: $gray;
     font-weight: bold;
+    background: inline('./icon-search.png') no-repeat right center;
+    background-size: 20px;
     &::placeholder {
         font-weight: bold;
     }
