Adds link to About the Data

--- a/src/partials/sections.html
+++ b/src/partials/sections.html
@@ -34,7 +34,7 @@
             section labeled <a class="pct-static-anchor" id="fifty-state" href="#section-states">“50-state data,”</a> users can sort and group all 50 states
             using multiple criteria, allowing users to identify groupings using a mix
             of measures. Information about the measures and the underlying data may be
-            found in the “About the data” section at the bottom of this page.
+            found in the <a class="pct-static-anchor" id="fifty-state" href="#section-about">“About the data” section</a> at the bottom of this page.
         </p>
         <p>
             States can use these data to select more appropriate peer groups, giving
