Fixes rerenderOnDataMismatch; WIP: need randomize to work again

--- a/src/partials/sections.html
+++ b/src/partials/sections.html
@@ -63,6 +63,8 @@
 <section id="section-states">
     <h2 class="static" role="button" tabindex="0" aria-label="Show/hide content">50-State Data</h2>
     <div class="js-inner-content">
+        <div id="selections-container"></div>
+        <div id="fifty-state-container"></div>
     </div>
 </section>
 <section id="section-about">
