Ellipsis overflow on dropdown for narrow screens

--- a/src/components/dropdown/styles.scss
+++ b/src/components/dropdown/styles.scss
@@ -22,6 +22,8 @@
         padding-right: 45px;
         padding-top: 6px;
         text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
     }
 
     &>ul {
